--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <span>笔记</span>
         </div>
         <div class="tab-item">
-            <img src="img/34.PNG" alt="我的">
+            <img src="img/34.png" alt="我的">
             <span>我的</span>
         </div>
     </div>
