--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="box4-item">
             <div class="box4-item-iop">
-                <img src="img/5.PNG" alt="更多">
+                <img src="img/5.png" alt="更多">
             </div>
         </div>
     </div>
